--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+  <!-- CDN SWEET ALERT -->
+<link rel="stylesheet" href="sweetalert2.min.css">
   </head>
   <body>
     <header>
@@ -129,12 +131,13 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Seguir Comprando</button>
-            <button type="button" class="btn btn-danger">Finalizar Compra</button>
+            <button type="button" class="btn btn-danger" id="finalizar_compra" data-bs-dismiss="modal">Finalizar Compra</button>
           </div>
         </div>
       </div>
     </div>
     <footer></footer>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
