--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       referrerpolicy="no-referrer"
     />
   <!-- CDN SWEET ALERT -->
-<link rel="stylesheet" href="sweetalert2.min.css">
+<!-- <link rel="stylesheet" href="sweetalert2.min.css"> -->
   </head>
   <body>
     <header>
